[hotfix] Fix issue with Chip Deletion using KB, Reset & Disable button

--- a/src/components/styles/IconButton.css
+++ b/src/components/styles/IconButton.css
@@ -24,3 +24,9 @@
     outline: none;
     border: #89b4fa solid 2px;
 }
+
+.icon-container.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+    cursor: not-allowed;
+}
