--- a/src/components/HOC/MovieRecs.css
+++ b/src/components/HOC/MovieRecs.css
@@ -1,9 +1,29 @@
 main {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
     .container {
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: center;
         justify-content: center;
         margin-bottom: 12rem;
+
+        .content {
+            display: flex;
+            flex-direction: column;
+
+            .title {
+                padding-bottom: 2.4rem;
+
+                h1 {
+                    font-size: 32px;
+                    font-weight: 600;
+                }
+            }
+        }
     }
 }
