--- a/src/components/styles/Chip.css
+++ b/src/components/styles/Chip.css
@@ -7,8 +7,12 @@
     gap: .4rem;
     padding: .4rem .6rem .4rem .8rem;
 
-    label {
+    span {
         font-size: .9rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 200px;
     }
 
     .icon-container.chip {
