--- a/src/components/HOC/MovieRecs.css
+++ b/src/components/HOC/MovieRecs.css
@@ -16,6 +16,49 @@ main {
             display: flex;
             flex-direction: column;
 
+            .recommendations {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                gap: .8rem;
+                margin-top: 2rem;
+            }
+
+            .gen-recs-btn {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 240px;
+                height: 14px;
+                margin-top: 2rem;
+                margin-bottom: 2rem;
+                padding: 1rem 2rem;
+                border-radius: 16px;
+                border: 2px solid #333;
+                background-color: #f5f5f5;
+                color: #333;
+                font-size: 1.02rem;
+                font-weight: 500;
+                cursor: pointer;
+            }
+
+            .gen-recs-btn:disabled {
+                background-color: #333;
+                color: #f5f5f5;
+                cursor: not-allowed;
+                opacity: .5;
+            }
+
+            .gen-recs-btn:hover {
+                background-color: #333;
+                border: 2px solid #f5f5f5;
+                color: #f5f5f5;
+            }
+
+            .gen-recs-btn:hover:disabled {
+                border: 2px solid transparent;
+            }
+
             .title {
                 padding-bottom: 2.4rem;
 
