chore: [wip] Cleanup styling: Divide main contents into 2 columns, Implement Tailwind & Prettier all files

--- a/src/components/styles/IconButton.css
+++ b/src/components/styles/IconButton.css
@@ -1,32 +1,39 @@
 .icon-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 22px;
-    height: 22px;
-    padding: 0.8rem;
-    border-radius: 12px;
-    position: relative;
-    transition: border 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 22px;
+  height: 22px;
+  padding: 0.8rem;
+  border-radius: 12px;
+  position: relative;
+  transition: border 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  cursor: pointer;
 }
 
 .icon-container.reset-btn {
-    border: #313244 solid 2px;
-    background-color: #121212;
+  border: #313244 solid 2px;
+  background-color: #121212;
 }
 
 .icon-container.reset-btn:hover {
-    border: #89b4fa solid 2px;
+  border: #89b4fa solid 2px;
 }
 
 .icon-container.reset-btn:focus {
-    outline: none;
-    border: #89b4fa solid 2px;
+  outline: none;
+  border: #89b4fa solid 2px;
 }
 
 .icon-container.disabled {
-    pointer-events: none;
-    opacity: 0.5;
-    cursor: not-allowed;
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.icon-container:focus svg,
+.icon-container:hover svg {
+  transform: rotate(-360deg);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
 }
