--- a/src/components/styles/Chip.css
+++ b/src/components/styles/Chip.css
@@ -1,29 +1,24 @@
 .chip {
-    display: flex;
-    align-items: center;
-    height: fit-content;
-    border-radius: 26px;
-    border: 2px #313244 solid;
-    gap: .4rem;
-    padding: .4rem .6rem .4rem .8rem;
+  display: flex;
+  align-items: center;
+  height: fit-content;
+  width: max-content;
+  border-radius: 26px;
+  border: 2px #313244 solid;
+  gap: 0.6rem;
+  padding: 0.4rem 0.6rem 0.4rem 0.8rem;
 
-    span {
-        font-size: .9rem;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        max-width: 200px;
-    }
+  .icon-container.chip {
+    border: none;
+    outline: none;
+    border: transparent solid 2px;
+    padding: 0.2rem;
+    transition: border 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
 
-    .icon-container.chip {
-        border: none;
-        border: transparent solid 2px;
-        padding: .2rem;
-        transition: border 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    }
-
-    .icon-container.chip:focus {
-        outline: none;
-        border: #89b4fa solid 2px;
-    }
+  .icon-container.chip:focus {
+    outline: none;
+    padding: 0.2rem;
+    border: #89b4fa solid 2px;
+  }
 }
